--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
     "1. Load in your programming environment the data stored in the $\\texttt{inputs.ext}$;\n",
     "2. Create a sequence $\\texttt{TAU}$ containing numbers from zero to 0.5 in steps of 0.001;\n",
     "3. Run through a loop for each value of your $\\texttt{TAU}$ sequence to\n",
-    "- Find the optimum portfolio with the given $\\texttt{m}$, $\\texttt{Q}$, and $\\texttt{tau}$ selected from $\\texttt{TAU}$;\n",
+    "- Find the optimum portfolio with the given $\\texttt{mu}$, $\\texttt{Q}$, and $\\texttt{tau}$ selected from $\\texttt{TAU}$;\n",
     "- Compute the optimum portfolio’s expected return and standard deviation of return;\n",
     "- Store the portfolio return and standard deviation.\n",
     "4. After completing the loop, plot the efficient frontier."
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
     "    model = sm.OLS(security_returns, X).fit()\n",
     "    return model.params[0], model.params[1], model.resid.std()\n",
     "\n",
-    "def analyze_data(file_path: str) -> None:\n",
+    "def analyze_data(file_path: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Analyzes Dow-Jones data to compute and print statistical measures.\n",
     "\n",
@@ -860,7 +860,7 @@
     "    sigma_M_squared = np.var(index_returns)\n",
     "    print(f\"\\nVariance of the Index's Return: {sigma_M_squared}\")\n",
     "\n",
-    "    ## Compute single-index approximation to the covariance matrix:\n",
+    "    ## Compute single-index approximation to the covariance matrix: \n",
     "\n",
     "    # Create an empty DataFrame to store the covariance matrix Qsi.\n",
     "    Qsi = pd.DataFrame(index=daily_returns.columns[1:], columns=daily_returns.columns[1:])\n",
@@ -875,7 +875,9 @@
     "    print(\"\\nSingle-Index Approximation Covariance Matrix (First 5 Rows and Columns):\")\n",
     "    print(Qsi.iloc[:5, :5])\n",
     "\n",
-    "analyze_data(file_path)"
+    "    return Qsi\n",
+    "\n",
+    "Qsi = analyze_data(file_path)"
    ]
   },
   {
@@ -979,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1026,6 +1028,28 @@
     "\n",
     "# Step 1: Plot the efficient frontier for Qts or time series approximation for covariance matrix.\n",
     "frontier_g(mu, Qts, tau_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Qsi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[183], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Step 2: Plot the efficient frontier Qsi or single index model for covariance matrix.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m frontier_g(mu, \u001b[43mQsi\u001b[49m, tau_range)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Qsi' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2: Plot the efficient frontier Qsi or single index model for covariance matrix.\n",
+    "frontier_g(mu, Qsi, tau_range)"
    ]
   }
  ],
