--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -866,7 +866,7 @@
     "    ## Compute single-index approximation to the covariance matrix: \n",
     "\n",
     "    # Create an empty DataFrame to store the covariance matrix Qsi.\n",
-    "    Qsi = pd.DataFrame(index=daily_returns.columns[1:], columns=daily_returns.columns[1:])\n",
+    "    Qsi = pd.DataFrame(index = annual_returns.columns[1:], columns = annual_returns.columns[1:])\n",
     "\n",
     "    for i in range(len(Qsi)):\n",
     "        for j in range(len(Qsi.columns)):\n",
