--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2.ipynb
@@ -19,6 +19,22 @@
     "\n",
     "**Professor**: Papa Momar Ndiaye"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Topics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Algebra & Optimization;\n",
+    "- Geometry of Efficient Frontiers;\n",
+    "- Applications of One-Fund & Two-Fund Theorems."
+   ]
   }
  ],
  "metadata": {
