--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -35,6 +35,13 @@
     "- Geometry of Efficient Frontiers;\n",
     "- Applications of One-Fund & Two-Fund Theorems."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### P1 - Optimization w/Equality Constraints (40 pts)"
+   ]
   }
  ],
  "metadata": {
