--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -42,6 +42,21 @@
    "source": [
     "#### P1 - Optimization w/Equality Constraints (40 pts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the optimization problem **Max Expected Return w/Target Risk**:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\underset{\\omega_1 \\omega_2} \\max & R_P (\\omega_1, \\omega_2) = \\mu_1 \\omega_1 + \\mu_2 \\omega_2 \\tag{1}\n",
+    "\\\\\n",
+    "\\text{s.t.} & \\sqrt{\\sigma_1^2 \\omega_1^2 + 2\\rho_{1, 2} \\cdot \\sigma_1 \\sigma_2 + \\sigma_2^2 \\omega_2^2}\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
