--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -53,7 +53,9 @@
     "\\begin{cases}\n",
     "\\underset{\\omega_1 \\omega_2} \\max & R_P (\\omega_1, \\omega_2) = \\mu_1 \\omega_1 + \\mu_2 \\omega_2 \\tag{1}\n",
     "\\\\\n",
-    "\\text{s.t.} & \\sqrt{\\sigma_1^2 \\omega_1^2 + 2\\rho_{1, 2} \\cdot \\sigma_1 \\sigma_2 + \\sigma_2^2 \\omega_2^2}\n",
+    "\\text{s.t.} & \\sqrt{\\sigma_1^2 \\omega_1^2 + 2\\rho_{1, 2} \\cdot \\sigma_1 \\sigma_2 + \\sigma_2^2 \\omega_2^2} = \\sigma_T\n",
+    "\\\\\n",
+    "& \\omega_1 + \\omega_2 = 1\n",
     "\\end{cases}\n",
     "$$"
    ]
