--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -51,13 +51,13 @@
     "\n",
     "$$\n",
     "\\begin{cases}\n",
-    "\\underset{\\omega_1 \\omega_2} \\max & R_P (\\omega_1, \\omega_2) = \\mu_1 \\omega_1 + \\mu_2 \\omega_2 \\tag{1}\n",
-    "\\\\\n",
-    "\\text{s.t.} & \\sqrt{\\sigma_1^2 \\omega_1^2 + 2\\rho_{1, 2} \\cdot \\sigma_1 \\sigma_2 + \\sigma_2^2 \\omega_2^2} = \\sigma_T\n",
-    "\\\\\n",
+    "\\underset{\\omega_1, \\omega_2}{\\max} & R_P (\\omega_1, \\omega_2) = \\mu_1 \\omega_1 + \\mu_2 \\omega_2 \\tag{1} \\\\\n",
+    "\\text{s.t.} & \\sqrt{\\sigma_1^2 \\omega_1^2 + 2 \\rho_{1, 2} \\sigma_1 \\sigma_2 \\omega_1 \\omega_2 + \\sigma_2^2 \\omega_2^2} = \\sigma_T \\\\\n",
     "& \\omega_1 + \\omega_2 = 1\n",
     "\\end{cases}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "where we have two securities with **Expected Returns** $\\mu_1$ and $\\mu_2$ for the column vector $(\\mu_1, \\mu_2)^\\intercal \\in \\mathbb{R}^{2 \\times 1}$, **volatilities** $(\\sigma_1, \\sigma_2) \\in \\mathbb{R}^{+}$, and **Pearson correlation coefficient** $\\rho_{1, 2} \\in [-1, 1]$. In addition, $\\sigma_T \\in \\mathbb{R}^+$ denotes the **target risk/vol**."
    ]
   }
  ],
