--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -57,7 +57,7 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "where we have two securities with **Expected Returns** $\\mu_1$ and $\\mu_2$ for the column vector $(\\mu_1, \\mu_2)^\\intercal \\in \\mathbb{R}^{2 \\times 1}$, **volatilities** $(\\sigma_1, \\sigma_2) \\in \\mathbb{R}^{+}$, and **Pearson correlation coefficient** $\\rho_{1, 2} \\in [-1, 1]$. In addition, $\\sigma_T \\in \\mathbb{R}^+$ denotes the **target risk/vol**."
+    "where we have two securities with **Expected Returns** $ \\mu_1 $ and $ \\mu_2 $ for the column vector $ (\\mu_1, \\mu_2)^\\intercal \\in \\mathbb{R}^{2 \\times 1} $, **volatilities** $ (\\sigma_1, \\sigma_2) \\in \\mathbb{R}^{+} $, and **Pearson correlation coefficient** $ \\rho_{1, 2} \\in [-1, 1] $. Additionally, $ \\sigma_T \\in \\mathbb{R}^+ $ denotes the **target risk/vol**."
    ]
   }
  ],
