--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,10 @@
     "mu2: float = 0.10  # Expected return of the second security\n",
     "sigma1: float = 0.10  # Volatility of the first security\n",
     "sigma2: float = 0.20  # Volatility of the second security\n",
-    "rho: float = -0.5  # Correlation coefficient between the securities"
+    "rho: float = -0.5  # Correlation coefficient between the securities\n",
+    "\n",
+    "# Target risk values\n",
+    "sigma_T_values: np.ndarray = np.arange(0.02, 0.305, 0.005)"
    ]
   }
  ],
