--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +109,16 @@
     "\n",
     "# Target risk values\n",
     "sigma_T_values: np.ndarray = np.arange(0.02, 0.305, 0.005)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def portfolio_return(weights, mu1, mu2):\n",
+    "    return weights[0] * mu1 + weights[1] * mu2"
    ]
   }
  ],
