--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -113,11 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def portfolio_return(weights, mu1, mu2):\n",
+    "def portfolio_return(weights: np.ndarray, mu1: float, mu2: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the portfolio return based on given weights and expected returns.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        weights (np.ndarray): Array of weights for the securities.\n",
+    "        mu1 (float): Expected return of the first security.\n",
+    "        mu2 (float): Expected return of the second security.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: The calculated portfolio return.\n",
+    "    \"\"\"\n",
     "    return weights[0] * mu1 + weights[1] * mu2"
    ]
   }
