--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +130,17 @@
     "        float: The calculated portfolio return.\n",
     "    \"\"\"\n",
     "    return weights[0] * mu1 + weights[1] * mu2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def portfolio_risk(weights, sigma1, sigma2, rho):\n",
+    "    return np.sqrt((sigma1 * weights[0]) ** 2 + (sigma2 * weights[1]) ** 2 + \n",
+    "                   2 * rho * sigma1 * sigma2 * weights[0] * weights[1])"
    ]
   }
  ],
