--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -134,11 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def portfolio_risk(weights, sigma1, sigma2, rho):\n",
+    "def portfolio_risk(weights: np.ndarray, sigma1: float, sigma2: float, rho: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the portfolio risk based on weights, individual volatilities, and correlation.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        weights (np.ndarray): Array of weights for the securities.\n",
+    "        sigma1 (float): Volatility of the first security.\n",
+    "        sigma2 (float): Volatility of the second security.\n",
+    "        rho (float): Correlation coefficient between the securities.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: The calculated portfolio risk.\n",
+    "    \"\"\"\n",
     "    return np.sqrt((sigma1 * weights[0]) ** 2 + (sigma2 * weights[1]) ** 2 + \n",
     "                   2 * rho * sigma1 * sigma2 * weights[0] * weights[1])"
    ]
