--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -157,11 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def objective(weights):\n",
+    "def objective(weights: np.ndarray) -> float:\n",
+    "    \"\"\"\n",
+    "    Objective function for minimization, used to maximize portfolio return.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        weights (np.ndarray): Array of weights for the securities.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Negative of the portfolio return (for minimization).\n",
+    "    \"\"\"\n",
     "    return -portfolio_return(weights, mu1, mu2)"
    ]
   }
