--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -173,6 +173,16 @@
     "    \"\"\"\n",
     "    return -portfolio_return(weights, mu1, mu2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def constraint(weights, sigma_T):\n",
+    "    return portfolio_risk(weights, sigma1, sigma2, rho) - sigma_T"
+   ]
   }
  ],
  "metadata": {
