--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -176,11 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraint(weights, sigma_T):\n",
+    "def constraint(weights: np.ndarray, sigma_T: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Constraint for the optimizer to achieve a specific target risk.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        weights (np.ndarray): Array of weights for the securities.\n",
+    "        sigma_T (float): Target risk level.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Difference between current and target risks.\n",
+    "    \"\"\"\n",
     "    return portfolio_risk(weights, sigma1, sigma2, rho) - sigma_T"
    ]
   }
