--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -193,6 +193,23 @@
     "    \"\"\"\n",
     "    return portfolio_risk(weights, sigma1, sigma2, rho) - sigma_T"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_rp: List[float] = []\n",
+    "\n",
+    "for sigma_T in sigma_T_values:\n",
+    "    cons = ({'type': 'eq', 'fun': lambda x: np.sum(x) - 1},\n",
+    "            {'type': 'eq', 'fun': lambda x: constraint(x, sigma_T)})\n",
+    "    bounds: Tuple[Tuple[float, float], Tuple[float, float]] = ((0, 1), (0, 1))\n",
+    "    initial_weights: List[float] = [0.5, 0.5]\n",
+    "    result = minimize(objective, initial_weights, bounds=bounds, constraints=cons)\n",
+    "    results_rp.append(-result.fun)"
+   ]
   }
  ],
  "metadata": {
