--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -238,6 +238,26 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Frontier Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph above depicts the relationship between the target risk ($\\sigma_T$) and the expected portfolio return ($R_p(\\sigma_T)$). Below are the key takeaways:\n",
+    "\n",
+    "1. ***Monotonic Increase***: As expected, the expected portfolio return increases with an increase in target risk, $\\sigma_T$. This reflects the classic **risk-return trade-off** in portfolio management.\n",
+    "\n",
+    "2. ***Plateau at Higher Risks***: The plateau observed at higher risk levels suggests that increasing risk beyond a certain point does **not proportionally increase returns**. This could be indicative of the constraints imposed by the maximum returns achievable based on the securities' parameters.\n",
+    "\n",
+    "3. ***Sharp Rise at Lower Risks***: The initial sharp rise suggests that minimal increases in risk from the lower end are highly compensated by increased returns. This can be attributed to the efficient allocation of weights in response to changes in $\\sigma_T$ under the given constraints."
+   ]
   }
  ],
  "metadata": {
