--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -258,6 +258,42 @@
     "\n",
     "3. ***Sharp Rise at Lower Risks***: The initial sharp rise suggests that minimal increases in risk from the lower end are highly compensated by increased returns. This can be attributed to the efficient allocation of weights in response to changes in $\\sigma_T$ under the given constraints."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optimization w/Inequality Constraints (20 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solve analytically (at least) one of the two following problems:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\underset{x_1, x_2} \\max & (x_1 - 2)^2 + 2(x_2 - 1)^2 \\tag{2}\n",
+    "\\\\\n",
+    "\\text{s.t} & x_1 + 4x_2 \\leq 3\n",
+    "\\\\\n",
+    "& x_1 \\geq x_2\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\underset{x_1, x_2} \\max & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{3}\n",
+    "\\\\\n",
+    "\\text{s.t} & x_1, x_2 \\geq 0\n",
+    "\\\\\n",
+    "& x_1 x_2 \\geq 2\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "and use an optimizer to verify your answer."
+   ]
   }
  ],
  "metadata": {
