--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### P1 - Optimization w/Equality Constraints (40 pts)"
+    "### P1 - Optimization w/Equality Constraints (40 pts)"
    ]
   },
   {
@@ -78,7 +78,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Efficient Frontier Mapping"
+    "#### 1. Lagrangian Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Problem Formulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The given optimization problem is:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\underset{x_1, x_2}{\\max} & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{3}\n",
+    "\\\\\n",
+    "\\text{s.t.} & x_1, x_2 \\geq 0\n",
+    "\\\\\n",
+    "& x_1 x_2 \\geq 2\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Lagrangian Formulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Lagrangian $\\mathcal{L}$ for this problem includes the objective function and the constraints incorporated through Lagrange multipliers:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(x_1, x_2, \\lambda_1, \\lambda_2, \\lambda_3) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \\lambda_1 x_1 + \\lambda_2 x_2 + \\lambda_3 (x_1 x_2 - 2)\n",
+    "$$\n",
+    "\n",
+    "Here, $\\lambda_1$, $\\lambda_2$, and $\\lambda_3$ are the Lagrange multipliers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Efficient Frontier Mapping"
    ]
   },
   {
