--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -128,7 +128,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### Lagrangian Partial Derivatives\n",
+    "\n",
+    "To find the stationary points, we take the partial derivatives of $\\mathcal{L}$ and set them to zero:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_1} = -2x_1 - x_2 + \\lambda_1 + \\lambda_3 x_2 = 0 \\tag{4}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = -x_1 - 6x_2 + \\lambda_2 + \\lambda_3 x_1 = 0 \\tag{5}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
