--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "$$\n",
     "\\begin{cases}\n",
-    "\\underset{x_1, x_2}{\\max} & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{3}\n",
+    "\\underset{x_1, x_2}{\\max} & 5 - x_1^2 - x_1x_2 - 3x_2^2 \\tag{2}\n",
     "\\\\\n",
     "\\text{s.t.} & x_1, x_2 \\geq 0\n",
     "\\\\\n",
@@ -119,7 +119,7 @@
     "The Lagrangian $\\mathcal{L}$ for this problem includes the objective function and the constraints incorporated through Lagrange multipliers:\n",
     "\n",
     "$$\n",
-    "\\mathcal{L}(x_1, x_2, \\lambda_1, \\lambda_2, \\lambda_3) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \\lambda_1 x_1 + \\lambda_2 x_2 + \\lambda_3 (x_1 x_2 - 2)\n",
+    "\\mathcal{L}(x_1, x_2, \\lambda_1, \\lambda_2, \\lambda_3) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \\lambda_1 x_1 + \\lambda_2 x_2 + \\lambda_3 (x_1 x_2 - 2) \\tag{3}\n",
     "$$\n",
     "\n",
     "Here, $\\lambda_1$, $\\lambda_2$, and $\\lambda_3$ are the Lagrange multipliers."
@@ -138,6 +138,19 @@
     "$$\n",
     "$$\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial x_2} = -x_1 - 6x_2 + \\lambda_2 + \\lambda_3 x_1 = 0 \\tag{5}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Complementary Slackness\n",
+    "\n",
+    "KKT conditions also include complementary slackness:\n",
+    "\n",
+    "$$\n",
+    "\\lambda_1 x_1 = 0, \\quad \\lambda_2 x_2 = 0, \\quad \\lambda_3 (x_1 x_2 - 2) = 0 \\tag{6}\n",
     "$$"
    ]
   },
