--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -85,13 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Problem Formulation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "##### Problem Formulation\n",
+    "\n",
     "The given optimization problem is:\n",
     "\n",
     "$$\n",
@@ -109,13 +104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Lagrangian Formulation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "##### Lagrangian Formulation\n",
+    "\n",
     "The Lagrangian $\\mathcal{L}$ for this problem includes the objective function and the constraints incorporated through Lagrange multipliers:\n",
     "\n",
     "$$\n",
@@ -152,6 +142,22 @@
     "$$\n",
     "\\lambda_1 x_1 = 0, \\quad \\lambda_2 x_2 = 0, \\quad \\lambda_3 (x_1 x_2 - 2) = 0 \\tag{6}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Solve the System of Equations\n",
+    "\n",
+    "We consider different cases based on the KKT conditions:\n",
+    "\n",
+    "1. **Case 1: Interior Solution**\n",
+    "   - Assume $\\lambda_1 = \\lambda_2 = \\lambda_3 = 0$.\n",
+    "   - Solve equations (4) and (5) directly.\n",
+    "2. **Case 2: Boundary Solution**\n",
+    "   - Assume $x_1 > 0, x_2 > 0$, and $x_1 x_2 = 2$.\n",
+    "   - Substitute $x_1 = \\frac{2}{x_2}$ into the equations and solve."
    ]
   },
   {
