--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -164,6 +164,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Analytical Solution\n",
+    "\n",
+    "**Case 1**: Assume $\\lambda_1 = \\lambda_2 = \\lambda_3 = 0$.\n",
+    "\n",
+    "Plugging in $\\lambda_1 = \\lambda_2 = \\lambda_3 = 0$ simplifies equations (4) and (5):\n",
+    "\n",
+    "$$\n",
+    "-2x_1 - x_2 = 0 \\implies x_2 = -2x_1 \\quad \\text{(not possible since $x_2 \\geq 0$)} \\tag{7}\n",
+    "$$\n",
+    "\n",
+    "**Case 2**: Boundary Solution with $x_1 x_2 = 2$\n",
+    "\n",
+    "Substitute $x_1 = \\frac{2}{x_2}$ into equations (4) and (5) and solve:\n",
+    "\n",
+    "$$\n",
+    "-2\\left(\\frac{2}{x_2}\\right) - x_2 + \\lambda_3 x_2 = 0 \\quad \\text{and} \\quad -\\frac{2}{x_2} - 6x_2 + \\lambda_3 \\frac{2}{x_2} = 0 \\tag{8}\n",
+    "$$\n",
+    "\n",
+    "Solving these equations:\n",
+    "\n",
+    "1. From equation (4): $\\lambda_3 x_2 = 4/x_2 + x_2$\n",
+    "2. Substitute $\\lambda_3 x_2$ from equation (4) into equation (5), and solve for $x_2$. This could yield $x_2 = \\sqrt{2}$, which when substituted back gives $x_1 = \\sqrt{2}$, hence $x_1 x_2 = 2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Conclusion\n",
+    "\n",
+    "Analytical solutions indicate that at $x_1 = x_2 = \\sqrt{2}$, the constraints are satisfied, and from the substitution into the objective function, we can evaluate the maximum value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2. Efficient Frontier Mapping"
    ]
   },
