--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### P1 - Optimization w/Equality Constraints (40 pts)"
+    "### Q1 - Optimization w/Equality Constraints (40 pts)"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Lagrangian Solution"
+    "#### 1.1 Lagrangian Solution"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Conclusion\n",
+    "##### Conclusion P1\n",
     "\n",
     "Analytical solutions indicate that at $x_1 = x_2 = \\sqrt{2}$, the constraints are satisfied, and from the substitution into the objective function, we can evaluate the maximum value."
    ]
@@ -201,7 +201,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Efficient Frontier Mapping"
+    "##### Optimal Solution\n",
+    "\n",
+    "The optimal solution, denoted by $\\omega^*(\\sigma_T)$, for the given problem under the constraints and specified conditions is:\n",
+    "\n",
+    "$$\n",
+    "\\omega_1^*(\\sigma_T) = \\sqrt{2}, \\quad \\omega_2^*(\\sigma_T) = \\sqrt{2}\n",
+    "$$\n",
+    "\n",
+    "This solution satisfies the constraint $x_1 x_2 \\geq 2$ with $x_1 x_2 = 2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Optimal Value\n",
+    "\n",
+    "The optimal value of the problem, denoted by $R_p(\\sigma_T)$, is calculated by evaluating the objective function at the optimal solution points $\\omega_1^*(\\sigma_T)$ and $\\omega_2^*(\\sigma_T)$. The calculation is as follows:\n",
+    "\n",
+    "$$\n",
+    "R_p(\\sigma_T) = R_p(\\omega_1^*(\\sigma_T), \\omega_2^*(\\sigma_T)) = f(\\sqrt{2}, \\sqrt{2})\n",
+    "$$\n",
+    "$$\n",
+    "= 5 - (\\sqrt{2})^2 - \\sqrt{2} \\times \\sqrt{2} - 3(\\sqrt{2})^2\n",
+    "$$\n",
+    "$$\n",
+    "= -5\n",
+    "$$\n",
+    "\n",
+    "Thus, the optimal value of the objective function, given the constraints and the formulation of the problem, is $R_p(\\sigma_T) = -5$.\n",
+    "\n",
+    "This value represents the maximum return achievable under the given constraints and is obtained at the solution where both $x_1$ and $x_2$ are $\\sqrt{2}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2 Efficient Frontier Mapping"
    ]
   },
   {
@@ -386,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Optimization w/Inequality Constraints (20 pts)"
+    "#### Q2 - Optimization w/Inequality Constraints (20 pts)"
    ]
   },
   {
